2005-04-30  8:30 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) made the parallel checks
	more precise. improved comments

2005-04-29 10:22 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveThreeFaceCell) fixed the gem checks,
	reporting, and extraneous parallel checks.

2005-04-28 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell,gridRemoveThreeFaceCell)
	removed regardless of cost.
	* src/gridswap.c (gridRemoveThreeFaceCell) fixed logic that made
	sure all three faces are on same faceId.


2005-04-28 15:25 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.11 Release. Tagging at FUN3D interface change to
	add gridparallelpreproject_.

2006-04-28 15:00 Mike Park <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt,gridParallelSwap) extracted the
	pre projection check to gridParallelPreProject.
	* src/gridmpi.c (gridParallelPreProject) added to run all the
	checks before projection.
	* src/gridfortran.c (gridparallelpreproject_) added to allow
	FUN3D to call the preprojection checks cleanly.
	
2006-04-28 13:35 Mike Park <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) Always split edges that are a
	potential problem for projection, regardless of the use of a plan.

2006-04-24 11:00 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) use_a_plan defaults to FALSE
	because the plan is too aggressive for sonicboom cases.  Can be
	controlled with env $REFINE_WITH_PLAN = "Yes"

2006-02-17  9:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeCells,
	gridParallelRelaxNegativeFaceAreaUV) they will use LP if
	#define USE_LINEAR_PROGRAMMING_FOR_UNTANGLING (TRUE).

2006-02-17  9:22 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) to permit
	use in parallel, added a allow_movement_near_ghost_nodes argment.

2005-02-16 16:30 Mike Park  <mike.park@nasa.gov>
